--- a/week2.html
+++ b/week2.html
@@ -37,12 +37,12 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (2)</b></font></td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Akers</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Freiermuth</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
