--- a/week5.html
+++ b/week5.html
@@ -23,10 +23,10 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
 <tr><td>Carr</td>          <td></td><td align=right>0</td></tr>
 <tr><td>JWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Dillon</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Doubs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
 <tr><td>York</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -140,11 +140,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
 <tr><td>London</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
