--- a/week5.html
+++ b/week5.html
@@ -68,12 +68,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>NHarris</td>       <td></td><td align=right>0</td></tr>
+<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Pickett</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -127,12 +127,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (7)</b></font></td></tr>
 <tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Gordon</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Zappe</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
