--- a/week5.html
+++ b/week5.html
@@ -115,7 +115,7 @@
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
